# PySyft

./: .bumpversion.cfg  .bumpversion_stable.cfg  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  justfile  main.py  objects.inv  permission testing sql.ipynb  permissions_prototype.ipynb  py-modindex.html  pyproject.toml  releases.md  searchindex.js  tox.ini
.archive/notebooks/: client.ipynb
.github/workflows/: apps-tests.yaml  cd-deploy-stage.yaml  cd-release.yaml  e2e-tests.yaml  pr-tests-linting.yml  pr-tests-stack.yml  pr-tests.yaml
_modules/: index.html  syft.html
_sources/api_reference/: syft.service.action.rst.txt  syft.service.project.project.rst.txt  syft.service.project.project_service.rst.txt  syft.service.project.project_stash.rst.txt  syft.util.rst.txt  syft.util.util.rst.txt
api_reference/: index.html  syft.capnp.html  syft.client.api.html  syft.client.client.html  syft.client.connection.html  syft.client.deploy.html  syft.client.html  syft.client.registry.html  syft.client.search.html  syft.client.user_settings.html  syft.external.html  syft.html  syft.node.credentials.html  syft.node.domain.html  syft.node.gateway.html  syft.node.html  syft.node.node.html  syft.node.routes.html  syft.node.run.html  syft.node.server.html  syft.node.worker.html  syft.node.worker_settings.html  syft.serde.array.html  syft.serde.arrow.html  syft.serde.capnp.html  syft.serde.deserialize.html  syft.serde.html  syft.serde.lib_permissions.html  syft.serde.lib_service_registry.html  syft.serde.recursive.html  syft.serde.recursive_primitives.html  syft.serde.serializable.html  syft.serde.serialize.html  syft.serde.signature.html  syft.serde.third_party.html  syft.service.action.action_data_empty.html  syft.service.action.action_object.html  syft.service.action.action_permissions.html  syft.service.action.action_service.html  syft.service.action.action_store.html  (+78 more)
config/prod/: syftbox.service
config/stage/: syftbox.service
docker/: syftbox.dockerfile
docs/: changes.md  permissions.md
examples/bigquery/: run.sh
examples/pingpong/: ping_request.py  pong_server.py
examples/rpc/: app.py  client.ipynb  client.py
js-sdk/: README.md  package-lock.json  package.json  sdk.js  test_sdk.js
js-sdk/examples/: simple.html  simple2.html
notebooks/: client.ipynb  http.ipynb  rsync.ipynb
proxy/: client_nginx.conf  proxy.dockerfile  server_nginx.conf
scripts/: upgrade_version_matrix.py
src/syft_extras/: main.py
syft-event/: pyproject.toml
syft-event/syft_event/: __init__.py  server.py
syft-files/: pyproject.toml
syft-files/syft_files/: __init__.py  utils.py
syft-proxy/: pyproject.toml
syft-requests/: pyproject.toml
syft-requests/syft_requests/: __init__.py
syft-rpc/: pyproject.toml
syft-rpc/syft_rpc/: __init__.py
syftbox/: __init__.py  main.py  server2client_version.json  version_matrix.json
syftbox/app/: cli.py  install.py
syftbox/assets/: tui.tcss
syftbox/client/: api.py  auth.py  base.py  benchmark.py  cli.py  cli_setup.py  client2.py  core.py  exceptions.py  fsevents.py  logger.py  network_metric.py  plugin_manager.py  server_client.py
syftbox/lib/: __init__.py  client_config.py  constants.py  datasite.py  debug.py  hash.py  http.py  lib.py  metrics.py  permissions.py  profiling.py  version_utils.py
syftbox/server/: analytics.py  (+7 more)
(+98 files in other folders)
