[project]
name = "syft-extras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["syft-core", "syft-event", "syft-rpc"]

[tool.uv.sources]
syft-core = { workspace = true }
syft-event = { workspace = true }
syft-rpc = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[dependency-groups]
dev = ["ruff>=0.9.3"]
