[project]
name = "syft-requests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[tool.setuptools]
packages = { find = {} }    # Use the find directive as a table
include-package-data = true # Include package data

[tool.uv.sources]
syft-rpc = { path = "../syft-rpc", editable = true }

[dependency-groups]
dev = ["syft-rpc"]
